--- a/index.html
+++ b/index.html
@@ -96,25 +96,25 @@
           <div class="shooter-row">
             <input type="text" name="team${i}_shooter1_first" placeholder="Vorname Schütze 1" required>
             <input type="text" name="team${i}_shooter1_last" placeholder="Nachname Schütze 1" required>
-            <input type="number" name="team${i}_shooter1_year" placeholder="Geburtsjahr" min="1900" max="2025" required>
+            <input type="number" name="team${i}_shooter1_year" placeholder="Geburtsjahr" min="1900" max="2025">
           </div>
 
           <div class="shooter-row">
             <input type="text" name="team${i}_shooter2_first" placeholder="Vorname Schütze 2" required>
             <input type="text" name="team${i}_shooter2_last" placeholder="Nachname Schütze 2" required>
-            <input type="number" name="team${i}_shooter2_year" placeholder="Geburtsjahr" min="1900" max="2025" required>
+            <input type="number" name="team${i}_shooter2_year" placeholder="Geburtsjahr" min="1900" max="2025">
           </div>
 
           <div class="shooter-row">
             <input type="text" name="team${i}_shooter3_first" placeholder="Vorname Schütze 3" required>
             <input type="text" name="team${i}_shooter3_last" placeholder="Nachname Schütze 3" required>
-            <input type="number" name="team${i}_shooter3_year" placeholder="Geburtsjahr" min="1900" max="2025" required>
+            <input type="number" name="team${i}_shooter3_year" placeholder="Geburtsjahr" min="1900" max="2025">
           </div>
 
           <div class="shooter-row">
             <input type="text" name="team${i}_shooter4_first" placeholder="Vorname Schütze 4" required>
             <input type="text" name="team${i}_shooter4_last" placeholder="Nachname Schütze 4" required>
-            <input type="number" name="team${i}_shooter4_year" placeholder="Geburtsjahr" min="1900" max="2025" required>
+            <input type="number" name="team${i}_shooter4_year" placeholder="Geburtsjahr" min="1900" max="2025">
           </div>
         `;
         container.appendChild(div);
@@ -123,3 +123,4 @@
   </script>
 </body>
 </html>
+
